--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,50 +24,6 @@
             "internalConsoleOptions": "neverOpen"
         },
         {
-            "name": "Launch Remote in Outlook (Edge)",
-            "type": "msedge",
-            "request": "launch",
-            "url": "https://outlook.office.com/host/${{M365_APP_ID}}?${account-hint}",
-            "presentation": {
-                "group": "group 2: Outlook",
-                "order": 3
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Launch Remote in Outlook (Chrome)",
-            "type": "chrome",
-            "request": "launch",
-            "url": "https://outlook.office.com/host/${{M365_APP_ID}}?${account-hint}",
-            "presentation": {
-                "group": "group 2: Outlook",
-                "order": 3
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Launch Remote in the Microsoft 365 app (Edge)",
-            "type": "msedge",
-            "request": "launch",
-            "url": "https://www.office.com/m365apps/${{M365_APP_ID}}?auth=2&${account-hint}",
-            "presentation": {
-                "group": "group 3: the Microsoft 365 app",
-                "order": 3
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Launch Remote in the Microsoft 365 app (Chrome)",
-            "type": "chrome",
-            "request": "launch",
-            "url": "https://www.office.com/m365apps/${{M365_APP_ID}}?auth=2&${account-hint}",
-            "presentation": {
-                "group": "group 3: the Microsoft 365 app",
-                "order": 3
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
             "name": "Attach to Frontend in Teams (Edge)",
             "type": "msedge",
             "request": "launch",
@@ -96,82 +52,11 @@
             "internalConsoleOptions": "neverOpen"
         },
         {
-            "name": "Attach to Frontend in Outlook (Edge)",
-            "type": "msedge",
-            "request": "launch",
-            "url": "https://outlook.office.com/host/${{local:M365_APP_ID}}?${account-hint}",
-            "cascadeTerminateToConfigurations": [
-                "Attach to Local Service"
-            ],
-            "presentation": {
-                "group": "all",
-                "hidden": true
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Attach to Frontend in Outlook (Chrome)",
-            "type": "chrome",
-            "request": "launch",
-            "url": "https://outlook.office.com/host/${{local:M365_APP_ID}}?${account-hint}",
-            "cascadeTerminateToConfigurations": [
-                "Attach to Local Service"
-            ],
-            "presentation": {
-                "group": "all",
-                "hidden": true
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Attach to Frontend in the Microsoft 365 app (Edge)",
-            "type": "msedge",
-            "request": "launch",
-            "url": "https://www.office.com/m365apps/${{local:M365_APP_ID}}?auth=2&${account-hint}",
-            "cascadeTerminateToConfigurations": [
-                "Attach to Local Service"
-            ],
-            "presentation": {
-                "group": "all",
-                "hidden": true
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Attach to Frontend in the Microsoft 365 app (Chrome)",
-            "type": "chrome",
-            "request": "launch",
-            "url": "https://www.office.com/m365apps/${{local:M365_APP_ID}}?auth=2&${account-hint}",
-            "cascadeTerminateToConfigurations": [
-                "Attach to Local Service"
-            ],
-            "presentation": {
-                "group": "all",
-                "hidden": true
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
-            "name": "Attach to Local Service",
-            "type": "node",
-            "request": "attach",
-            "port": 9239,
-            "restart": true,
-            "presentation": {
-                "group": "all",
-                "hidden": true
-            },
-            "internalConsoleOptions": "neverOpen"
-        },
-        {
             "name": "Python: Run App Locally",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/app.py",
             "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${command:python.interpreterPath}"
-            },
             "console": "integratedTerminal",
         }
     ],
@@ -180,7 +65,6 @@
             "name": "Debug in Teams (Edge)",
             "configurations": [
                 "Attach to Frontend in Teams (Edge)",
-                "Attach to Local Service",
                 "Python: Run App Locally"
             ],
             "preLaunchTask": "Start Teams App Locally",
@@ -194,7 +78,7 @@
             "name": "Debug in Teams (Chrome)",
             "configurations": [
                 "Attach to Frontend in Teams (Chrome)",
-                "Attach to Local Service"
+                "Python: Run App Locally"
             ],
             "preLaunchTask": "Start Teams App Locally",
             "presentation": {
@@ -203,57 +87,5 @@
             },
             "stopAll": true
         },
-        {
-            "name": "Debug in Outlook (Edge)",
-            "configurations": [
-                "Attach to Frontend in Outlook (Edge)",
-                "Attach to Local Service"
-            ],
-            "preLaunchTask": "Start Teams App Locally",
-            "presentation": {
-                "group": "group 2: Outlook",
-                "order": 1
-            },
-            "stopAll": true
-        },
-        {
-            "name": "Debug in Outlook (Chrome)",
-            "configurations": [
-                "Attach to Frontend in Outlook (Chrome)",
-                "Attach to Local Service"
-            ],
-            "preLaunchTask": "Start Teams App Locally",
-            "presentation": {
-                "group": "group 2: Outlook",
-                "order": 2
-            },
-            "stopAll": true
-        },
-        {
-            "name": "Debug in the Microsoft 365 app (Edge)",
-            "configurations": [
-                "Attach to Frontend in the Microsoft 365 app (Edge)",
-                "Attach to Local Service"
-            ],
-            "preLaunchTask": "Start Teams App Locally",
-            "presentation": {
-                "group": "group 3: the Microsoft 365 app",
-                "order": 1
-            },
-            "stopAll": true
-        },
-        {
-            "name": "Debug in the Microsoft 365 app (Chrome)",
-            "configurations": [
-                "Attach to Frontend in the Microsoft 365 app (Chrome)",
-                "Attach to Local Service"
-            ],
-            "preLaunchTask": "Start Teams App Locally",
-            "presentation": {
-                "group": "group 3: the Microsoft 365 app",
-                "order": 2
-            },
-            "stopAll": true
-        }
     ]
 }
